# hybrid-log-analyzer

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: evaluate.yaml  lint.yaml  retrain.yaml  test.yaml  train.yaml
configs/: drain.ini  drain_bgl.ini  params.yaml
data/: raw.dvc
data/processed/: 20260407_2026_dataset_meta.json  20260407_2026_hdfs_templates_enriched.json  hdfs_enriched_mistral_large.txt  hdfs_enriched_mistral_small.txt  hdfs_templates.json  hdfs_templates_enriched.json
docs/: pipeline-explained.md  proposed-solution.md
guides/: mlops.guide.md
infrastructure/: neo4j.dockerfile
notebooks/: 1_Parser.ipynb  2_EnrichTemplates.ipynb  3_Sequencer_IDs.ipynb  3_Sequencer_TimeWindow.ipynb  4_Logs2Graphs.ipynb  4_Logs2Graphs_BGL.ipynb  5_PrepareDataset_BGL.ipynb  6_1_GAE_Training copy.ipynb  6_GAE_Training.ipynb  6_GAE_Training_BGL.ipynb  EnrichTemplates.ipynb  GAE_Training.ipynb  GraphMining.ipynb  Logs2Graphs.ipynb  PROCESS.md  Parser.ipynb  ParserBGL.ipynb  PrepareDataset.ipynb  README.md  Tracker.md  evaluate.ipynb  finetune_llm.ipynb  train_gat.ipynb
notes/: TrainingResearch.md
plans/: mlops.plan.md
runs/: 20260407_2026.json  20260422_2333.json  index.json
src/: __init__.py  evaluate.py  model.py  preprocessing.py  run_tracker.py  utils.py
src/enricher/: HDFS.md  __init__.py  enricher.py  llm.py  schemas.py
src/parser/: PARSER.md  __init__.py  (+2 more)
tests/: test_bgl_parser.py  test_evaluate.py  test_model.py  test_preprocessing.py  test_utils.py
(+6 files in other folders)
